orbits-docker/files/envoy/api-gateway.yml
# envoy as edge server conf: https://github.com/envoyproxy/envoy/blob/master/examples/front-proxy/service-envoy.yaml
# envoy as edge server blogpost: https://www.envoyproxy.io/docs/envoy/latest/configuration/best_practices/edge
# envoy documentation: https://www.envoyproxy.io/docs/envoy/v1.14.1/
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
            - name: envoy.file_access_log
              config:
                path: /dev/stdout
          route_config:
            name: static_api_routes
            virtual_hosts:
            - name: api_vhost
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/sao/"
                route:
                  cluster: cluster_sao
              - match:
                  prefix: "/galatea/"
                route:
                  cluster: cluster_galatea
              - match:
                  prefix: "/cmsusers/"
                route:
                  cluster: cluster_users
          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}
  clusters:
  - name: cluster_sao
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_sao
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8083
  - name: cluster_galatea
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_galatea
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8082
  - name: cluster_users
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_users
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8081
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9001
